<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.inditex</groupId>
	<artifactId>zarachallenge</artifactId>
	<version>0.1.0</version>
	<name>Zara challenge</name>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.2</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<openapi-generator-maven-plugin.version>7.2.0</openapi-generator-maven-plugin.version>
		<springdoc-openapi.version>1.7.0</springdoc-openapi.version>
		<springdoc-openapi-starter-webmvc-ui.version>2.3.0</springdoc-openapi-starter-webmvc-ui.version>
		<liquibase.version>4.25.1</liquibase.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<easy.random.version>5.0.0</easy.random.version>
		<allure-junit5.version>2.25.0</allure-junit5.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mock-server</groupId>
			<artifactId>mockserver-netty-no-dependencies</artifactId>
			<version>5.13.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-messaging</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<version>1.58</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>20.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.unitils</groupId>
			<artifactId>unitils-core</artifactId>
			<version>3.4.6</version>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!--- Dependencys for solution -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${springdoc-openapi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>${mapstruct.version}</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>${liquibase.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jeasy</groupId>
			<artifactId>easy-random-core</artifactId>
			<version>${easy.random.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-junit5</artifactId>
			<version>${allure-junit5.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>${openapi-generator-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>generate-controller-interface</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/similarProducts.yaml</inputSpec>
							<apiPackage>${project.groupId}.${project.artifactId}.controller</apiPackage>
							<modelPackage>${project.groupId}.${project.artifactId}.infrastructure.dto</modelPackage>
							<invokerPackage>${project.groupId}.${project.artifactId}.infrastructure.invoker</invokerPackage>
							<skipValidateSpec>false</skipValidateSpec>
							<generateSupportingFiles>false</generateSupportingFiles>
							<output>${project.basedir}</output>
							<generatorName>spring</generatorName>
							<library>spring-boot</library>
							<modelNameSuffix>DTO</modelNameSuffix>
							<apiNameSuffix>ControllerInterface</apiNameSuffix>
							<configOptions>
								<useSpringBoot3>true</useSpringBoot3>
								<useSpringController>no</useSpringController>
								<java8>true</java8>
								<dateLibrary>java8</dateLibrary>
								<openApiNullable>false</openApiNullable>
								<interfaceOnly>true</interfaceOnly>
								<skipDefaultInterface>true</skipDefaultInterface>
								<sourceFolder>src/main/java</sourceFolder>
								<useTags>true</useTags>
								<useSwaggerUI>no</useSwaggerUI>
								<swaggerDocketConfig>no</swaggerDocketConfig>
								<useOptional>true</useOptional>
								<returnSuccessCode>true</returnSuccessCode>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<additionalModelTypeAnnotations>
									@lombok.Builder(toBuilder = true)
									@lombok.With
								</additionalModelTypeAnnotations>
								<generateTests>false</generateTests>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>generate-cliente-rest-template</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/similarProductEngineAPI.yaml</inputSpec>
							<apiPackage>${project.groupId}.${project.artifactId}.infrastructure.rest.similarProductEngineAPI.client</apiPackage>
							<modelPackage>${project.groupId}.${project.artifactId}.infrastructure.rest.similarProductEngineAPI.model</modelPackage>
							<invokerPackage>${project.groupId}.${project.artifactId}.infrastructure.rest.similarProductEngineAPI.invoker</invokerPackage>
                            <output>${project.basedir}</output>
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateSupportingFiles>true</generateSupportingFiles>
							<supportingFilesToGenerate>ApiClient.java,JavaTimeFormatter.java,Authentication.java,RFC3339DateFormat.java</supportingFilesToGenerate>
                            <generatorName>java</generatorName>
                            <library>resttemplate</library>
							<apiNameSuffix>ClientApi</apiNameSuffix>
							<generateApiTests>false</generateApiTests>
							<configOptions>
                                <dateLibrary>java8</dateLibrary>
                                <openApiNullable>false</openApiNullable>
								<java8>true</java8>
								<dateLibrary>java8</dateLibrary>
								<useTags>true</useTags>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<useJakartaEe>true</useJakartaEe>
								<delegatePattern>true</delegatePattern>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
